--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -122,7 +122,7 @@
 
                 <div class="modal-container" id="suscripcion">
                     <h3>¡Gracias por suscribirte a nuestro Newsletter <span id="suscriptor"></span>!</h3>
-                    <button type="button" class="button-edit" id="cerrarSuscripcion">cerrar</button>
+                    <button type="button" class="button-edit" id="cerrarSuscripcion">Cerrar</button>
                 
                 </div>
             </div>
