--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -16,7 +16,7 @@
                         value=<%= locals.old && old.email? old.email:null  %>>
                     <div class="alert erName"></div>
                     <% if (locals.errors && errors.email) { %>
-                    <p class="alert"><%=errors.email.msg%></p>
+                    <p class="alert2"><%=errors.email.msg%></p>
 
                     <% } %>
                 </div>
