--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -14,8 +14,9 @@
                 <input type="text" name="name" id="name" placeholder="Nombre del producto" class="control1
                     <%= locals.errors && errors.name ? "is-invalid":null  %>" value="<%=producto.name%>">
                 <% if (locals.errors && errors.name) { %>
-                <p class="alert"><%=errors.name.msg%></p>
+                <p class="alert2"><%=errors.name.msg%></p>
                 <% } %>
+                <div id="nameError" class="alert"></div>
             </div>
             <div class="control-formulario1">
                 <label for="description">Detalle del producto:</label>
@@ -23,15 +24,17 @@
                     placeholder="Detalle del producto"
                     class="control1 <%= locals.errors && errors.description? "is-invalid":null  %>" />
                 <% if (locals.errors && errors.description) { %>
-                <p class="alert"><%=errors.description.msg%></p>
+                <p class="alert2"><%=errors.description.msg%></p>
                 <% } %>
+                <div id="descriptionError" class="alert"></div>
             </div>
             <div class="control-formulario1">
                 <label for="imagen">Imagen del producto:</label>
-                <input type="file" name="image" />
+                <input type="file" name="image" id="image" />
                 <% if (locals.errors && errors.image) { %>
-                <p class="alert"><%=errors.image.msg%></p>
+                <p class="alert2"><%=errors.image.msg%></p>
                 <% } %>
+                <div id="imageError" class="alert"></div>
             </div>
             <div>
                 <label for="genre" class="negrita">Genero</label>
@@ -41,8 +44,9 @@
                     <%= genre.id === producto.genre_id ? "checked":null %>><%= genre.name %>
                 <% }) %>
                 <% if (locals.errors && errors.genre) { %>
-                <p class="alert"><%=errors.genre.msg%></p>
+                <p class="alert2"><%=errors.genre.msg%></p>
                 <% } %>
+                <div id="genreError" class="alert"></div>
             </div>
 
             <div class="control-formulario1">
@@ -54,8 +58,9 @@
                     <% }) %>
                 </select>
                 <% if (locals.errors && errors.brand) { %>
-                <p class="alert"><%=errors.brand.msg%></p>
+                <p class="alert2"><%=errors.brand.msg%></p>
                 <% } %>
+                <div id="brandError" class="alert"></div>
             </div>
 
             <div>
@@ -83,8 +88,9 @@
                     <%= producto.size.includes("46") ? "checked":" " %> />46
 
                 <% if (locals.errors && errors.size) { %>
-                <p class="alert"><%=errors.size.msg%></p>
+                <p class="alert2"><%=errors.size.msg%></p>
                 <% } %>
+                <div id="sizeError" class="alert"></div>
             </div>
 
             <div class="control-formulario1">
@@ -97,8 +103,9 @@
                     <% }) %>
                 </select>
                 <% if (locals.errors && errors.colors) { %>
-                <p class="alert"><%=errors.colors.msg%></p>
+                <p class="alert2"><%=errors.colors.msg%></p>
                 <% } %>
+                <div id="colorsError" class="alert"></div>
             </div>
 
             <div class="control-formulario1">
@@ -111,8 +118,9 @@
                     <% }) %>
                 </select>
                 <% if (locals.errors && errors.category) { %>
-                <p class="alert"><%=errors.category.msg%></p>
+                <p class="alert2"><%=errors.category.msg%></p>
                 <% } %>
+                <div id="categoryError" class="alert"></div>
             </div>
 
             <div class="control-formulario1">
@@ -121,8 +129,9 @@
                     class="control1 <%= locals.errors && errors.price? "is-invalid":null  %>" />
 
                 <% if (locals.errors && errors.price) { %>
-                <p class="alert"><%=errors.price.msg%></p>
+                <p class="alert2"><%=errors.price.msg%></p>
                 <% } %>
+                <div id="priceError" class="alert"></div>
             </div>
 
             <div class="control-formulario1">
@@ -130,8 +139,9 @@
                 <input type="number" name="discount" value="<%=producto.discount%>" id="discount" placeholder="15"
                     class="control1 <%= locals.errors && errors.discount? "is-invalid":null  %>" />
                 <% if (locals.errors && errors.discount) { %>
-                <p class="alert"><%=errors.discount.msg%></p>
+                <p class="alert2"><%=errors.discount.msg%></p>
                 <% } %>
+                <div id="discountError" class="alert"></div>
             </div>
 
             <br />
