--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -123,7 +123,10 @@
                 <div class="modal-container" id="suscripcion">
                     <h3>¡Gracias por suscribirte a nuestro Newsletter <span id="suscriptor"></span>!</h3>
                     <button type="button" class="button-edit" id="cerrarSuscripcion">Cerrar</button>
-                
+                </div>
+                <div class="modal-container" id="ingresaEmail">
+                    <h3>Ingresá un Email para Suscribirte</h3>
+                    <button type="button" class="button-edit" id="cerrarEmail">Cerrar</button>
                 </div>
             </div>
 
