--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -2,9 +2,9 @@
 
     <section>
 
-        <div class="main-footer">
-            <article class="footer-article">
-                <h4 class="titulo">INSTITUCIONAL<i class="fas fa-chevron-down none3"></i></h4>
+        <div class="main-footer" id="mainFooter">
+            <h4 class="titulo">INSTITUCIONAL <i class="fas fa-chevron-down none3 downArrow1"></i><i class="fas fa-chevron-up none3 upArrow1"></i></h4>
+            <article class="footer-article" id="footerArticle1">
                 <div class="italic center padding">
                     <ul class="footer">
                         <li><a href="/products" class="linkfooter">Quienes somos</a></li>
@@ -13,8 +13,8 @@
                     </ul>
                 </div>
             </article>
-            <article class="footer-article">
-                <h4 class="titulo">AYUDA<i class="fas fa-chevron-down none3"></i></h4>
+            <h4 class="titulo">AYUDA <i class="fas fa-chevron-down none3 downArrow2"></i><i class="fas fa-chevron-up none3 upArrow2"></i></h4>
+            <article class="footer-article" id="footerArticle2">
                 <div class="italic center padding">
                     <ul class="footer">
                         <li><a href="/products" class="linkfooter">Preguntas frecuentes</a></li>
@@ -25,8 +25,8 @@
                     </ul>
                 </div>
             </article>
-            <article class="footer-article">
-                <h4 class="titulo">CONTACTO<i class="fas fa-chevron-down icon-title none3"></i></h4>
+            <h4 class="titulo">CONTACTO <i class="fas fa-chevron-down none3 downArrow3"></i><i class="fas fa-chevron-up none3 upArrow3"></i></h4>
+            <article class="footer-article" id="footerArticle3">
                 <div class="italic">
                     <ul class="footer">
                         <li><a href="/products" class="linkfooter">0800-888-8888</a></li>
@@ -50,5 +50,6 @@
             </div>
         </div>
     </section>
+
 
 </footer>
