--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -89,7 +89,8 @@
         <a href="/products/<%= producto.id %>/edit"><button type="button" class="button-edit">EDITAR</button></a>
 
 
-        <form action="/products/<%=producto.id %>?_method=DELETE" method="POST" id="eliminarProducto" style="display: inline-flex">
+        <form action="/products/<%=producto.id %>?_method=DELETE" method="POST" id="eliminarProducto"
+            style="display: inline-flex">
             <button type="submit" class="button-edit button-delete">ELIMINAR</button>
         </form>
         <div class="modal-container" id="modalEliminar">
@@ -157,11 +158,17 @@
 
         </section>
 
+        <div class="modal-container" id="suscripcion">
+            <h3>Debes seleccionar un talle</h3>
+            <button type="button" class="button-edit" id="cerrarSuscripcion">Cerrar</button>
+        </div>
+
         <div class="newsletter">
 
             <h3 class="newsletter-title">SUSCRIBITE AL NEWSLETTER</h3>
             <div class="control-formulario">
-                <input type="email" name="email" id="emailSuscripcion" placeholder="Ingresá tu email" class="control" required>
+                <input type="email" name="email" id="emailSuscripcion" placeholder="Ingresá tu email" class="control"
+                    required>
                 <button type="button" class="boton-suscribe" id="botonSuscribe">SUSCRIBIRME</button>
             </div>
 
@@ -175,10 +182,10 @@
             </div>
         </div>
 
-        
+
     </main>
     <%- include("../partials/footer")%>
-    
+    <script src="/js/productCart.js"></script>
 </body>
 
 </html>
