agregando mas funcionalidades al footer

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1248,7 +1248,8 @@ div.italic {
     .main-footer{
         display: flex;
         flex-direction: row;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
     .footer{
         border: none;
@@ -1257,6 +1258,25 @@ div.italic {
     .linkfooter{
         justify-content: center;
     }
+    .footer-article{
+        display: block;
+        order:2;
+        width: 30%;
+        margin: 0px;
+    }
+    .footer-title{
+        width: 30%;
+        order:1;
+        padding:15px 15px 0px 15px;
+        color:white
+    }
+    .upArrow1{
+        display:none
+    }
+    .downArrow1{
+        display:none
+    }
+    
     .center1{
         border-top: solid 1px #ffffff;
         padding-top: 7px ;
