--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,7 +3,7 @@
     <section>
 
         <div class="main-footer" id="mainFooter">
-            <h4 class="titulo">INSTITUCIONAL <i class="fas fa-chevron-down none3 downArrow1"></i><i class="fas fa-chevron-up none3 upArrow1"></i></h4>
+            <h4 class="titulo footer-title ft1">INSTITUCIONAL <i class="fas fa-chevron-down none3 downArrow1"></i><i class="fas fa-chevron-up none3 upArrow1"></i></h4>
             <article class="footer-article" id="footerArticle1">
                 <div class="italic center padding">
                     <ul class="footer">
@@ -13,25 +13,23 @@
                     </ul>
                 </div>
             </article>
-            <h4 class="titulo">AYUDA <i class="fas fa-chevron-down none3 downArrow2"></i><i class="fas fa-chevron-up none3 upArrow2"></i></h4>
+            <h4 class="titulo footer-title ft2">AYUDA <i class="fas fa-chevron-down none3 downArrow2"></i><i class="fas fa-chevron-up none3 upArrow2"></i></h4>
             <article class="footer-article" id="footerArticle2">
                 <div class="italic center padding">
                     <ul class="footer">
                         <li><a href="/products" class="linkfooter">Preguntas frecuentes</a></li>
                         <li><a href="/products" class="linkfooter">Sucursales</a></li>
-                        <li><a href="/products" class="linkfooter">Pagos</a></li>
-                        <li><a href="/products" class="linkfooter">Entregas</a></li>
-                        <li><a href="/products" class="linkfooter">Cambios</a></li>
+                        <li><a href="/products" class="linkfooter">Pagos/Entregas</a></li>
                     </ul>
                 </div>
             </article>
-            <h4 class="titulo">CONTACTO <i class="fas fa-chevron-down none3 downArrow3"></i><i class="fas fa-chevron-up none3 upArrow3"></i></h4>
+            <h4 class="titulo footer-title ft3">CONTACTO <i class="fas fa-chevron-down none3 downArrow3"></i><i class="fas fa-chevron-up none3 upArrow3"></i></h4>
             <article class="footer-article" id="footerArticle3">
-                <div class="italic">
+                <div class="italic center padding">
                     <ul class="footer">
                         <li><a href="/products" class="linkfooter">0800-888-8888</a></li>
                         <li><a href="/products" class="linkfooter">Lunes a Sábado de 9 a 18 hs</a></li>
-                        <li><a href="/products" class="linkfooter"><i class="far fa-envelope "></i>Envianos un
+                        <li><a href="/products" class="linkfooter">Envianos un
                                 mensaje</a>
                         </li>
                     </ul>
