--- a/src/views/users/userEdit.ejs
+++ b/src/views/users/userEdit.ejs
@@ -118,7 +118,8 @@
 
             <h3 class="newsletter-title">SUSCRIBITE AL NEWSLETTER</h3>
             <div class="control-formulario">
-                <input type="email" name="email" id="emailSuscripcion" placeholder="Ingresá tu email" class="control" required>
+                <input type="email" name="email" id="emailSuscripcion" placeholder="Ingresá tu email" class="control"
+                    required>
                 <button type="button" class="boton-suscribe" id="botonSuscribe">SUSCRIBIRME</button>
             </div>
 
