--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,7 +3,8 @@
     <section>
 
         <div class="main-footer" id="mainFooter">
-            <h4 class="titulo">INSTITUCIONAL <i class="fas fa-chevron-down none3 downArrow1"></i><i class="fas fa-chevron-up none3 upArrow1"></i></h4>
+            <h4 class="titulo">INSTITUCIONAL <i class="fas fa-chevron-down none3 downArrow1"></i><i
+                    class="fas fa-chevron-up none3 upArrow1"></i></h4>
             <article class="footer-article" id="footerArticle1">
                 <div class="italic center padding">
                     <ul class="footer">
@@ -13,7 +14,8 @@
                     </ul>
                 </div>
             </article>
-            <h4 class="titulo">AYUDA <i class="fas fa-chevron-down none3 downArrow2"></i><i class="fas fa-chevron-up none3 upArrow2"></i></h4>
+            <h4 class="titulo">AYUDA <i class="fas fa-chevron-down none3 downArrow2"></i><i
+                    class="fas fa-chevron-up none3 upArrow2"></i></h4>
             <article class="footer-article" id="footerArticle2">
                 <div class="italic center padding">
                     <ul class="footer">
@@ -25,7 +27,8 @@
                     </ul>
                 </div>
             </article>
-            <h4 class="titulo">CONTACTO <i class="fas fa-chevron-down none3 downArrow3"></i><i class="fas fa-chevron-up none3 upArrow3"></i></h4>
+            <h4 class="titulo">CONTACTO <i class="fas fa-chevron-down none3 downArrow3"></i><i
+                    class="fas fa-chevron-up none3 upArrow3"></i></h4>
             <article class="footer-article" id="footerArticle3">
                 <div class="italic">
                     <ul class="footer">
