--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -109,7 +109,8 @@
 
             <h3 class="newsletter-title">SUSCRIBITE AL NEWSLETTER</h3>
             <div class="control-formulario">
-                <input type="email" name="email" id="emailSuscripcion" placeholder="Ingresá tu email" class="control" required>
+                <input type="email" name="email" id="emailSuscripcion" placeholder="Ingresá tu email" class="control"
+                    required>
                 <button type="button" class="boton-suscribe" id="botonSuscribe">SUSCRIBIRME</button>
             </div>
 
@@ -121,7 +122,7 @@
                 <h3>Ingresá un Email para Suscribirte</h3>
                 <button type="button" class="button-edit" id="cerrarEmail">Cerrar</button>
             </div>
-            </div>
+        </div>
 
 
         <% } %>
@@ -132,7 +133,7 @@
     </main>
     <%- include("../partials/footer")%>
 
-    
+
 </body>
 
 </html>
