--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -53,7 +53,8 @@
 
             <h3 class="newsletter-title">SUSCRIBITE AL NEWSLETTER</h3>
             <div class="control-formulario">
-                <input type="email" name="email" id="emailSuscripcion" placeholder="Ingresá tu email" class="control" required>
+                <input type="email" name="email" id="emailSuscripcion" placeholder="Ingresá tu email" class="control"
+                    required>
                 <button type="button" class="boton-suscribe" id="botonSuscribe">SUSCRIBIRME</button>
             </div>
 
@@ -71,7 +72,7 @@
     <%- include("../partials/footer")%>
 
     <script src="/js/validationsLogin.js"></script>
-       
+
 </body>
 
 </html>
