--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -22,10 +22,10 @@
                     <a href="/users/logout"><button type="button" class="boton-login">CERRAR SESION</button></a>
                 </div>
 
-                <a href="/users/edit"><button type="button"
-                        class="button-edit">EDITAR</button></a>
+                <a href="/users/edit"><button type="button" class="button-edit">EDITAR</button></a>
 
-                <form action="/users/delete/<%=user.id %>?_method=DELETE" method="POST" style="display: inline-flex" id="eliminarUsuario">
+                <form action="/users/delete/<%=user.id %>?_method=DELETE" method="POST" style="display: inline-flex"
+                    id="eliminarUsuario">
                     <button type="submit" class="button-edit button-delete">ELIMINAR</button>
                 </form>
                 <div class="modal-container" id="modalEliminarUsuario">
@@ -40,7 +40,7 @@
     </main>
 
     <%- include("../partials/footer")%>
-    
+
 </body>
 
 </html>
