--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,11 +20,15 @@
         </div>
 
         <div class="mySlides fade">
-            <img src="/images/banner-converse.webp" style="width:100%">
+            <img src="/images/banner-vans.png" style="width:100%">
         </div>
 
         <div class="mySlides fade">
-            <img src="/images/banner-adidas-classic.jpg" style="width:100%">
+            <img src="/images/banner-adidas.png" style="width:100%">
+        </div>
+
+        <div class="mySlides fade">
+            <img src="/images/banner-puma.jpg" style="width:100%">
         </div>
 
         <a class="prev">&#10094;</a>
@@ -37,6 +41,7 @@
         <span class="dot" id="dot1"></span>
         <span class="dot" id="dot2"></span>
         <span class="dot" id="dot3"></span>
+        <span class="dot" id="dot4"></span>
     </div>
 
     <main>
